# Django_davanced

./: db.sqlite3  manage.py  pyproject.toml  test.sh
Django_advanced/: .gitignore  asgi.py  local_settings.py  settings.py  urls.py  wsgi.py
tabom/apis/v1/: like_router.py
tabom/apis/v1/schemas/: article_response.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py  0003_article_like_count.py
tabom/models/: article.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_auto_now.py  test_cascade.py  test_like_service.py
tabom/tests/services/: test_like_service.py
